deploy/portal/k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailwind-internal
  labels:
    app.kubernetes.io/part-of: tailwind-portal
